[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier-json-service"
version = "0.1.0"
description = "Deterministic JSON normalization and fingerprinting for an Atelier provider"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FORI Studio" }]
dependencies = []

[project.scripts]
atelier-json = "atelier_json_service.cli:main"
atelier-orders-readonly = "atelier_json_service.poller:main"

[tool.setuptools]
packages = ["atelier_json_service"]

